Fix incorrectly stretched elements across devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 html,
 body,
 #root {
-  height: 100%;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+  height: 100vh;
   overflow: auto;
 }
